[package]
name = "zcash-vote"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = "1.0.62"
anyhow = "1.0.40"
log = "0.4.14"
futures = "0.3.30"
futures-core = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
prost = "0.13.5"
tokio = { version = "1.6", features = ["rt-multi-thread", "tokio-macros"] }
tonic = {version = "0.13.0", features = ["tls-webpki-roots"]}
pasta_curves = "0.5"
blake2b_simd = "1.0.0"
ff = "0.13"
rand = "0.8.4"
serde = {version = "1.0.126", features = ["derive"]}
http = "0.2.12"
halo2_proofs = "0.2.0"
dotenv = "0.15.0"
serde_json = "1.0"
lazy_static = "1.5.0"

bip0039 = "0.12.0"
bech32 = "0.9.1"
subtle = "2.6.1"
rand_core = "0.6.4"

sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

incrementalmerkletree = "0.3.1"

orchard = { version = "0.11.0", features = ["vote"] }
zcash_address = "0.7"
zcash_note_encryption = "0.4"
zcash_primitives = {version = "0.22", features = ["transparent-inputs"]}

[patch.crates-io]
#orchard = { path = "../orchard" }
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="75448e671f56f7c6d3f29502f5a26370a056b86c"}
#halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
#halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

#[build-dependencies]
#prost-build = "0.10.3"
